--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ numpy==1.26.4
 pandas==2.2.2                                 
 scikit-learn==1.5.1              
 streamlit==1.37.1          
-   
+tensorflow==2.17.0
 
